--- a/index.html
+++ b/index.html
@@ -66,9 +66,6 @@
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
       </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -80,8 +77,8 @@
   <h4>Search Engine</h4>
   <input type="text" placeholder="Search...">
   <br>
-  <a href="a" class="btn">Dictionary</a>
-  <a href="a" class="btn">Scholar</a>
+  <a href="dictionary.html" class="btn">Dictionary</a>
+  <a href="scholar.html" class="btn">Scholar</a>
 </body>
 
 </html>
