--- a/index.html
+++ b/index.html
@@ -6,43 +6,10 @@
   <title>Search Box Page</title>
 </head>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<style>
-  .search {
-    margin: 0 auto;
-    text-align: center;
-  }
-
-  .search h4{
-    color: #171414;
-    margin: 50px 0px 20px 0px;
-    font-size: 100px;
-  }
-
-  .search input[type=text]{
-    color: #171414;
-    width: 60%;
-    border-radius: 30px;
-    outline: none;
-    padding-left: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border: solid 1px #5bd1ee;
-  }
-
-  .search a {
-    margin-top: 20px;
-    width: 100px;
-    text-align: center;
-    margin-left: 5px;
-  }
-
-  .search a:hover {
-    background-color: #d6edf3;
-  }
-</style>
+<link rel="stylesheet" href="styles.css">
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="#">Search Engine</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -53,12 +20,12 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="dictionary.html">Dictionary</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="scholar.html">Scholar</a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="#">Action</a>
           <a class="dropdown-item" href="#">Another action</a>
