--- a/index.html
+++ b/index.html
@@ -47,15 +47,7 @@
   <a href="#" class="btn">Scholar</a>
 </div>
 
-<script>
-  function dict(){
-    var x = document.getElementById("search").value;
-    const url = "https://www.dictionary.com/browse/";
-    var url1 = url + x;
-    var win = window.open(url1, '_self');
-    win.focus;
-  }
-</script>
+<script src="index.js"></script>
 
 </body>
 
